# bilimusic

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: dart_analyze.yml  release_build.yml
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
assets/: version.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
just_aaudio/: README.md  pubspec.yaml
just_aaudio/android/: CMakeLists.txt  build.gradle  settings.gradle
just_aaudio/android/src/main/: AndroidManifest.xml
just_aaudio/android/src/main/cpp/: CMakeLists.txt  native-audio.cpp
just_aaudio/android/src/main/java/github/naivg/just_aaudio/: AAudioPlayer.java  AudioConverter.java  JustAaudioFlutterPlugin.java
just_aaudio/lib/: just_aaudio.dart
lib/: index.dart  main.dart
lib/api/: bili_client.dart  bili_exception.dart
lib/components/: audio_player_manager.dart  autoAppBar.dart  auto_appbar.dart  cover_display_widget.dart  desktop_window_controls.dart  function_controls_widget.dart  import_progress_dialog.dart  index.dart  long_press_menu.dart  lyric_display_widget.dart  mini_player.dart  mini_player_bar.dart  music_info_widget.dart  music_list.dart  page_selector_widget.dart  play_list.dart  player_controls_widget.dart  player_manager.dart  playlist_manager.dart
lib/core/: app_providers.dart  database.dart  service_locator.dart
lib/managers/: audio_handler.dart  cache_manager.dart  fav_sync_manager.dart  index.dart  player_manager.dart  (+4 more)
linux/: CMakeLists.txt
web/: cors_proxy.js  index.html  manifest.json
windows/: CMakeLists.txt
(+153 files in other folders)
